add numeric input component

--- a/src/app.scss
+++ b/src/app.scss
@@ -30,6 +30,10 @@ p {
   border: 1px solid #cbd2db;
 }
 
+.noUi-connect {
+  background: #565656;
+}
+
 .noUi-handle:before, .noUi-handle:after {
   content: none;
 }
