--- a/src/index.html.tmpl
+++ b/src/index.html.tmpl
@@ -4,7 +4,7 @@
   <title>ODS Tracks Demo</title>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
